Refactored API to support Read/Write
By removing the footer and only using a header, we can skip needing to
validate the entire payload. This does mean that truly random bytes
being upgraded to being dataversioned are technically able to be
detected as dataversioned, assuming they start with the magic code and
pass muster as an ordered-varint.

But, the use case of this library is adding format transitions and
version transition support across any serialization type. Since
serialization types are unlikely to start with our magic code, it's a
safer assumption than we can make when we assume the input is truly
random data.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ thiserror = "1"
 [dev-dependencies]
 serde = { version = "1", features = ["derive"] }
 bincode = "1"
-pot = "0.1.0-alpha.3"
+pot = { git = "https://github.com/khonsulabs/pot", branch = "main" }
 thiserror = "1"
 anyhow = "1"
+
+# [patch.crates-io]
+# pot = { path = "../pot/pot" }
