--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 default = []
 strategy-bincode = ["bincode", "serde"]
 strategy-pot = ["pot", "serde"]
+async = ["tokio", "futures-core", "futures-sink"]
 
 [[example]]
 name = "playground"
@@ -20,6 +21,10 @@ thiserror = "1"
 serde = { version = "1", features = ["derive"], optional = true }
 bincode = { version = "1", optional = true }
 pot = { version = "1.0.0-rc.1", optional = true }
+futures-core = { version = "0.3", optional = true }
+futures-sink = { version = "0.3", optional = true }
+tokio = { version = "1.0", features = ["net"], optional = true }
+bytes = { version = "1.0", optional = true }
 
 [dev-dependencies]
 serde = { version = "1", features = ["derive"] }
@@ -27,6 +32,8 @@ thiserror = "1"
 anyhow = "1"
 bincode = "1"
 pot = "1.0.0-rc.1"
+futures = "0.3"
+tokio = { version = "1.0", features = ["full"] }
 
 # [patch.crates-io]
 # pot = { path = "../pot/pot" }
