Split into workspace + ci workflows

--- a/crates/transmog-versions/Cargo.toml
+++ b/crates/transmog-versions/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "transmog"
+name = "transmog-versions"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-
 [dependencies]
+transmog = { path = "../transmog" }
+ordered-varint = "0.1.0-dev.1"
+thiserror = "1"
