--- a/crates/transmog-bincode/Cargo.toml
+++ b/crates/transmog-bincode/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "transmog"
+name = "transmog-bincode"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-
 [dependencies]
+transmog = { path = "../transmog" }
+serde = "1"
+bincode = "1"
