--- a/crates/transmog-pot/Cargo.toml
+++ b/crates/transmog-pot/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "transmog"
+name = "transmog-pot"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-
 [dependencies]
+pot = { version = "1.0.0-rc.1" }
+transmog = { path = "../transmog" }
+serde = "1"
