--- a/crates/transmog-async/Cargo.toml
+++ b/crates/transmog-async/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
 name = "transmog-async"
-version = "0.1.0"
+version = "0.1.0-dev.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-transmog = { path = "../transmog" }
+transmog = { path = "../transmog", version = "0.1.0-dev.1" }
 futures-core = { version = "0.3" }
 futures-sink = { version = "0.3" }
 tokio = { version = "1.0", features = ["net"] }
@@ -18,6 +16,5 @@ thiserror = "1"
 anyhow = "1"
 futures = "0.3"
 tokio = { version = "1.0", features = ["full"] }
-transmog-bincode = { path = "../transmog-bincode" }
-transmog-pot = { path = "../transmog-pot" }
-# serde = { version = "1"}
+transmog-bincode = { path = "../transmog-bincode", version = "0.1.0-dev.1" }
+transmog-pot = { path = "../transmog-pot", version = "0.1.0-dev.1" }
