--- a/crates/transmog-pot/Cargo.toml
+++ b/crates/transmog-pot/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "transmog-pot"
-version = "0.1.0"
+version = "0.1.0-dev.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 pot = { version = "1.0.0-rc.1" }
-transmog = { path = "../transmog" }
+transmog = { path = "../transmog", version = "0.1.0-dev.1" }
 serde = "1"
+
+[dev-dependencies]
+transmog = { path = "../transmog", version = "0.1.0-dev.1", features = [
+    "test-util",
+] }
