--- a/crates/transmog/Cargo.toml
+++ b/crates/transmog/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "transmog"
-version = "0.1.0"
+version = "0.1.0-dev.1"
 edition = "2021"
+repository = "https://github.com/khonsulabs/transmog"
+license = "MIT OR Apache-2.0"
+keywords = ["serialization"]
+categories = ["encoding"]
+readme = "../README.md"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-
-[dependencies]
+[features]
+default = []
+test-util = []
