--- a/examples/versions/Cargo.toml
+++ b/examples/versions/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "versions-examples"
-version = "0.1.0"
+version = "0.1.0-dev.1"
 edition = "2021"
 publish = false
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 transmog = { path = "../../crates/transmog" }
