--- a/crates/transmog-pot/Cargo.toml
+++ b/crates/transmog-pot/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/khonsulabs/transmog"
 license = "MIT OR Apache-2.0"
 keywords = ["serialization"]
 categories = ["encoding"]
-readme = "../README.md"
+readme = "./README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
