--- a/crates/transmog-json/Cargo.toml
+++ b/crates/transmog-json/Cargo.toml
@@ -1,20 +1,19 @@
 [package]
-name = "transmog-pot"
+name = "transmog-json"
 version = "0.1.0-dev.2"
 edition = "2021"
-description = "Pot adaptor for Transmog"
+description = "Json adaptor for Transmog"
 repository = "https://github.com/khonsulabs/transmog"
 license = "MIT OR Apache-2.0"
-keywords = ["serialization", "pot"]
+keywords = ["serialization", "json"]
 categories = ["encoding"]
 readme = "./README.md"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-pot = { version = "1.0.0-rc.3" }
+serde_json = { version = "1" }
 transmog = { path = "../transmog", version = "0.1.0-dev.2" }
 serde = "1"
+thiserror = "1"
 
 [dev-dependencies]
 transmog = { path = "../transmog", version = "0.1.0-dev.2", features = [
