--- a/examples/versions/Cargo.toml
+++ b/examples/versions/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "versions-examples"
-version = "0.1.0-dev.2"
+version = "0.0.0"
 edition = "2021"
 publish = false
 
@@ -10,6 +10,6 @@ transmog-versions = { path = "../../crates/transmog-versions" }
 transmog-pot = { path = "../../crates/transmog-pot" }
 transmog-bincode = { path = "../../crates/transmog-bincode" }
 
-serde = { version = "1", features = ["derive"] }
-thiserror = "1"
-anyhow = "1"
+serde = { version = "1.0.136", features = ["derive"] }
+thiserror = "1.0.30"
+anyhow = "1.0.53"
