--- a/crates/transmog-cbor/Cargo.toml
+++ b/crates/transmog-cbor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "transmog-cbor"
-version = "0.1.0-dev.2"
+version = "0.1.0"
 edition = "2021"
 description = "CBOR adaptor for Transmog"
 repository = "https://github.com/khonsulabs/transmog"
@@ -12,12 +12,10 @@ readme = "./README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ciborium = "0.2"
-transmog = { path = "../transmog", version = "0.1.0-dev.2" }
-serde = "1"
-thiserror = "1"
+ciborium = "0.2.0"
+transmog = { path = "../transmog", version = "0.1.0" }
+serde = "1.0.136"
+thiserror = "1.0.30"
 
 [dev-dependencies]
-transmog = { path = "../transmog", version = "0.1.0-dev.2", features = [
-    "test-util",
-] }
+transmog = { path = "../transmog", version = "0.1.0", features = ["test-util"] }
