--- a/crates/transmog-json/Cargo.toml
+++ b/crates/transmog-json/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "transmog-json"
-version = "0.1.0-dev.2"
+version = "0.1.0"
 edition = "2021"
 description = "Json adaptor for Transmog"
 repository = "https://github.com/khonsulabs/transmog"
@@ -11,11 +11,9 @@ readme = "./README.md"
 
 [dependencies]
 serde_json = { version = "1" }
-transmog = { path = "../transmog", version = "0.1.0-dev.2" }
+transmog = { path = "../transmog", version = "0.1.0" }
 serde = "1"
 thiserror = "1"
 
 [dev-dependencies]
-transmog = { path = "../transmog", version = "0.1.0-dev.2", features = [
-    "test-util",
-] }
+transmog = { path = "../transmog", version = "0.1.0", features = ["test-util"] }
